--- a/if-you/index.html
+++ b/if-you/index.html
@@ -346,6 +346,7 @@ img {
 								<div class="mb-3">
 								  <textarea class="form-control" id="message" name="message" maxlength='140' placeholder="Write your message" rows="4"></textarea>
 								  <div id="charsLeft" class="form-text">You have <span>140</span> characters left.</div>
+								  <div class="err-message form-textm"></div>
 								</div>
 								<div class="d-flex justify-content-end">
 									<button type="button" class="btn btn-primary start-btn disabled">Send</button>
