--- a/if-you/index.html
+++ b/if-you/index.html
@@ -4,22 +4,13 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script>
+            window.location.replace("https://if-you-97083.web.app/");
+        </script>
         <title>If you leave it up to the audience, they can kill you</title>
-        <style type="text/css">
-            body, html
-            {
-                margin: 0; padding: 0; height: 100%; overflow: hidden;
-            }
-
-            #content
-            {
-                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
-            }
-        </style>
+        
     </head>
     <body>
-        <div id="content">
-            <iframe width="100%" height="100%" frameborder="0" src="https://roddickinson.net/mqtt/"></iframe>
-        </div>
+       
     </body>
 </html>
